--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC
+
+spring.datasource.username=root
+spring.datasource.password=1234
+
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.jpa.properties.hibernate.show_sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.jpa.hibernate.ddl-auto=create
