--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.jpa.hibernate.ddl-auto=create
+
